<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>can_bridge</name>
  <version>0.0.0</version>
  <description>CAN Report / Command bridge</description>
  <maintainer email="yhjeon@avgenius.kr">YANG HO JEON</maintainer>
  <license>Apache--2.0</license>

  <depend>std_msgs</depend>
  <depend>can_bridge_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
    <pythonpath>${prefix}/can_bridge</pythonpath>
  </export>
</package>
