<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pix_vehicle_msgs</name>
  <version>0.0.0</version>
  <description>pix_vehicle(opera_kit)`s Report/Command msgs interface</description>
  <maintainer email="yhejon@avgenius.kr">JEON YANG HO</maintainer>
  <license>TODO: License declaration</license>

  <!-- build tool depend  -->
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <!-- msg depend -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <!-- build depend -->
  <build_depend>rosidl_default_generators</build_depend>
  <!-- exec depend -->
  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- test depend -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- member of group  -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
